# design_patterns

./: .clang-format  .gitignore  CMakeLists.txt  README.md
alg/: CMakeLists.txt  algs.cpp  algs.h
alg/singleton/: singleton.h  singleton_instance_hungry.h  singleton_instance_local_lazy.h  singleton_instance_lock_normal_lazy.h  singleton_instance_normal_lazy.h
cmake_utils/: gtest.cmake  securec.cmake
test/: CMakeLists.txt  algs_test.cpp  singleton_test.cpp
